force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Principal_Paid__c</fullName>
    <description>Tổng số tiền gốc đã thanh toán</description>
    <label>Total Principal Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>