force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_TSA_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_TSA_Code__c</fullName>
    <description>Mã TSA</description>
    <label>TSA Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>