force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type__c</fullName>
    <description>Kiểu phí/lãi trong Termination</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>