force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Warning_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Warning_Code__c</fullName>
    <description>Khóa cảnh báo</description>
    <label>Warning Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>