force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Website_Account__c.field-meta.xml
<CustomField>
    <fullName>FEC_Website_Account__c</fullName>
    <description>Tài khoản trên web FEC</description>
    <label>Website Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>