force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Work_Phone__c</fullName>
    <description>Số điện thoại công việc</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>