force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Zalo_Follower__c.field-meta.xml
<CustomField>
    <fullName>FEC_Zalo_Follower__c</fullName>
    <description>Theo dõi FEC Zalo</description>
    <label>Zalo Follower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>